# TabulAIrity

./: .gitignore  BlueDogsDemo.ipynb  DONScraper.ipynb  README.md  pyproject.toml  requirements.txt
examples/: DONScraper.ipynb
input/: DONPages.csv
networks/: BlueDogs.csv  DONExtraction.csv
output/: DONPrepped.csv  DONPrepped.geojson  DONScrape.csv  DONScrape.pickle  DONValidationTable.csv
src/: chatprompts.py
src/TabulAIrity.egg-info/: PKG-INFO  SOURCES.txt
src/tabulairity/: chatnet.py  gsheetconnector.py  scrapertools.py  selfimprovement.py  tabulairity.py  tabulairity.py.bak
